force-app/main/default/objects/GfAmsWarehousingItem__c/GfAmsWarehousingItem__c.object-meta.xml
<CustomObject>
    <label>Warehousing Item (Old)</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>