force-app/main/default/objects/GfAmsWarehousingItem__c/fields/GfAmsWarehousing__c.field-meta.xml
<CustomField>
    <fullName>GfAmsWarehousing__c</fullName>
    <label>Warehousing</label>
    <referenceTo>GfAmsWarehousing__c</referenceTo>
    <relationshipName>Warehousing_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>