force-app/main/default/objects/GfAmsWarehousingItem__c/fields/GoodsCode__c.field-meta.xml
<CustomField>
    <fullName>GoodsCode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Goods Code</label>
    <referenceTo>GfAmsGoods__c</referenceTo>
    <relationshipName>Warehousing_Item</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>