force-app/main/default/objects/GfAmsWarehousingItem__c/fields/NetAmountOk__c.field-meta.xml
<CustomField>
    <fullName>NetAmountOk__c</fullName>
    <formula>NetPrice__c * QuantityConfirm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount Ok</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>