force-app/main/default/objects/GfAmsWarehousingItem__c/fields/PurchaseOrderItem__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrderItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Order Item</label>
    <referenceTo>GfAmsPurchaseOrderItem__c</referenceTo>
    <relationshipName>Warehousing_Item</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>