force-app/main/default/objects/GfAmsWarehousingItem__c/fields/ReasonOk__c.field-meta.xml
<CustomField>
    <fullName>ReasonOk__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>lost goods</fullName>
            </value>
            <value>
                <fullName>sales adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>