force-app/main/default/objects/GfAmsWarehousingItem__c/fields/SkuOption1__c.field-meta.xml
<CustomField>
    <fullName>SkuOption1__c</fullName>
    <label>Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>