force-app/main/default/objects/GfAmsWarehousingItem__c/fields/TaxAmountOk__c.field-meta.xml
<CustomField>
    <fullName>TaxAmountOk__c</fullName>
    <formula>TaxPrice__c * QuantityConfirm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount Ok</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>