force-app/main/default/objects/GfAmsWarehousingItem__c/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <defaultValue>0.1</defaultValue>
    <label>Tax Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>